# sparrow-lora

./: .gitignore  .gitmodules  CMakeLists.txt  cmake-build.sh  readme.md
.github/workflows/: sparrow-ci.yml
Application/: board.h  board_radio.h  config_notecard.h  config_radio.h  config_sys.h  readme.txt  sparrow.ioc
Application/App/: app.c  app.h  appinit.c  atp.c  dfu.c  dfuload.c  flash.c  gateway.c  led.c  note.c  post.c  radioinit.c  sched.c  sensor.c  trace.c  util.c
Application/Core/Inc/: main.h  stm32_lpm_if.h  stm32wlxx_hal_conf.h  stm32wlxx_it.h  timer_if.h  utilities_conf.h  utilities_def.h
Application/Core/Radio/: mw_log_conf.h  radio_board_if.c  radio_conf.h  readme.txt  timer.h
Application/Core/Src/: debug.c  main.c  stm32_lpm_if.c  stm32wlxx_hal_msp.c  stm32wlxx_it.c  system_stm32wlxx.c  timer_if.c  usart_if.c  util_if.c
Application/EWARM/: Backup of sparrow.ewp  Project.eww  sparrow.dep  sparrow.ewd  sparrow.ewp  sparrow.ewt  stm32wl55xx_flash_cm4.icf  stm32wl55xx_flash_cm4.icf.original
Application/EWARM/settings/: Project.wsdt  sparrow.dbgdt  sparrow.dnx  sparrow.sparrow.cspy.bat  sparrow.sparrow.cspy.ps1  sparrow.sparrow.driver.xcl  sparrow.sparrow.general.xcl
Application/EWARM/sparrow/: .ninja_deps  .ninja_log
Application/EWARM/sparrow/Exe/: sparrow.out  sparrow.sim  upload.cmd
Application/EWARM/sparrow/List/: sparrow.map
Application/Framework/: app.c  appinit.c  atp.c  dfu.c  flash.c  framework.h  gateway.c  led.c  note.c  post.c  radioinit.c  sched.c  sched.h  sensor.c  trace.c  util.c
Application/Gateway/: auth.c
Application/STM32CubeIDE/: .cproject  .project  sparrow.launch
Application/Sensor/: app.h  appdefs.h  bme.c  bme.h  button.c  button.h  config.c  init.c  null.c  ping.c  ping.h  pir.c  pir.h  pyq.c  sensor.h
Datasheets/: datasheets.md  parts.txt
Docs/: rfsel.pptx  rfsel.xlsx  sparrow-design-v1.docx
startup/wl55-cube/: STM32WL55CCUX_FLASH.ld
startup/wle5-cube/: STM32WLE5CCUX_FLASH.ld
